--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="graphic design, modern graphic design, web design, affordable web design, professional web design">
     <meta name="author" content="Ljubomir Stojanović">
     <title>Modern Graphic Design | Welcome</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="js/jquery.min.js" charset="utf-8"></script>
   </head>
   <body>
